# neurostack

./: CLA.md  CONTRIBUTING.md  Containerfile.e2e-api  NOTICE  README.md  e2e-svg-gen.py  e2e-test-community.sh  e2e-test-full-ollama.sh  e2e-test-lite.sh  e2e-test-stale-notes.sh  install.sh  pyproject.toml  test-docker.sh
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  deploy-docs.yml  publish.yml
ci-test/stale-notes/devops/: docker-swarm-legacy.md
ci-test/stale-notes/research/: memory-palace-technique.md  neural-network-architectures.md
docs/: comparison.md  demo-setup.sh  demo.tape  demo.webm  neuroscience-appendix.md
docs-site/: index.html  package-lock.json  package.json
docs-site/public/: 404.html  CNAME
docs-site/src/: App.css  App.jsx  index.css  main.jsx
docs-site/src/blog/: Blog.css  Blog.jsx  BlogPost.jsx  posts.js
docs/tapes/: brief.tape  common.tape  doctor.tape  graph.tape  index.tape  install.tape  memories.tape  onboard.tape  prediction-errors.tape  record-usage.tape  scaffold.tape  search.tape  stats.tape  status.tape  summary.tape
npm/: README.md  package.json  postinstall.js  preuninstall.js
src/neurostack/: __init__.py  __main__.py  api.py  ask.py  brief.py  chunker.py  cli.py  community.py  community_search.py  config.py  context.py  embedder.py  graph.py  harvest.py  leiden.py  memories.py  preflight.py  professions.py  reranker.py  schema.py  search.py  server.py  session_index.py  summarizer.py  triples.py  vault_writer.py  watcher.py
src/neurostack/skills/: memory-management.md  session-lifecycle.md  vault-search.md
tests/: conftest.py  e2e_api.py  test_chunker.py  test_config.py  test_embedder.py  test_graph.py  test_memories.py  test_preflight.py  test_schema.py  test_search.py  test_session_index.py  test_vault_writer.py
vault-template/: CLAUDE.md
vault-template/archive/: index.md
vault-template/calendar/: index.md
vault-template/home/projects/: index.md
vault-template/home/resources/: index.md
vault-template/inbox/: index.md
vault-template/literature/: index.md
vault-template/meta/: index.md
vault-template/research/: active-recall.md  complementary-learning-systems.md  index.md  interleaving.md  memory-consolidation.md  prediction-errors-in-learning.md  spaced-repetition.md
vault-template/templates/: daily-note.md  literature-note.md  project-note.md  research-note.md
vault-template/work/: index.md
