[project]
name = "neurostack"
version = "0.1.0"
description = "Build, maintain, and search your knowledge vault. CLI + MCP server with stale note detection, semantic search, and neuroscience-grounded memory."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "Raphael Southall" },
]
keywords = ["knowledge-management", "obsidian", "mcp", "neuroscience", "pkm", "zettelkasten", "rag", "local-first", "knowledge-graph", "semantic-search", "ai-memory", "second-brain"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: Indexing",
]

# Core dependencies — lite mode (FTS5 only, no ML)
dependencies = [
    "pyyaml>=6.0",
    "watchdog>=4.0",
    "mcp[cli]>=1.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
# Full mode — CPU ML (embeddings, summaries, reranking)
full = [
    "numpy>=1.26",
    "sentence-transformers>=3.0",
]
# Community detection — GPL-3.0 isolated
community = [
    "leidenalg>=0.10",
    "python-igraph>=0.11",
]
# Development
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[project.scripts]
neurostack = "neurostack.cli:main"

[project.urls]
Homepage = "https://neurostack.sh"
Documentation = "https://neurostack.sh"
Repository = "https://github.com/raphasouthall/neurostack"
Issues = "https://github.com/raphasouthall/neurostack/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/neurostack"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
"src/neurostack/community.py" = ["E402"]
"src/neurostack/community_search.py" = ["E402"]
"src/neurostack/search.py" = ["E402"]
"src/neurostack/server.py" = ["E402"]
"src/neurostack/watcher.py" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
